[package]
name = "protondb-check"
version = "0.1.0"
authors = ["Celeo <mattboulanger@fastmail.com>"]
edition = "2024"
description = ""
readme = "README.md"
homepage = "https://github.com/celeo/protondb-check"
repository = "https://github.com/celeo/protondb-check"
license = "MIT OR Apache-2.0"
exclude = [".github"]
keywords = ["crates"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.102"
indoc = "2"
clap = { version = "4.6.1", features = ["derive"] }
ureq = { version = "3.3.0", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
comfy-table = "7.2.2"
