[package]
name = "protondb_search"
version = "1.0.0"
authors = ["Celeo <mattboulanger@fastmail.com>"]
edition = "2024"
description = "CLI utility to search ProtonDB"
readme = "README.md"
homepage = "https://github.com/celeo/protondb_search"
repository = "https://github.com/celeo/protondb_search"
license = "MIT"
exclude = [".github"]
keywords = ["protondb", "steam", "proton", "linux-gaming", "gaming"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.102"
indoc = "2.0.7"
clap = { version = "4.6.1", features = ["derive"] }
ureq = { version = "3.3.0", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
comfy-table = "7.2.2"
